Добавлена возможность выбора селекторами операций для импорта